# F1-tenth_control

./: .gitignore  CLAUDE.md  CMakeLists.txt  COLCON_IGNORE  F1TENTH 하드웨어 및 제어 통합 가이드.docx  WORKLOG.md  package.xml  steering_control_overview.md  vesc_appconf.xml  vesc_mcconf.xml  안티그래비티 IMU 통합 및 연결 가이드.docx
config/: aeb_params.yaml
control_code/: MAP_controller_prev.py  MAP_controller_reference.py  aeb_node.cpp  control_MPPI.cpp  control_map_node.cpp  control_mppi_node.cpp  control_mppi_solver_cpu.cpp  control_mppi_solver_gpu.cu  drive_source_selector.cpp  gap_follower.cpp  geometry_utils.cpp  imu_stability_controller.cpp  joy_teleop_monitor.cpp  lookup_steer_angle.py  lut_calibrator_node.cpp  mpc_controller.cpp  odom_calib_node.cpp  realcar_dashboard_node.cpp  sim_imu_bridge_node.cpp  stability_controller.cpp  steering_control_node.cpp  teleop_dashboard_node.cpp  velocity_profiler.cpp
include/f1tenth_control/: gap_follower.hpp  geometry_utils.hpp  imu_stability_controller.hpp  mpc_controller.hpp  mppi_gpu.hpp  mppi_types_gpu.hpp  stability_controller.hpp  steering_lookup_table.hpp  types.hpp  velocity_profiler.hpp
launch/: _control_common.py  aeb.launch.py  control_real.launch.py  control_sim.launch.py  dashboard.launch.py  joy.launch.py  lut_calibration.launch.py
tools/bag_analyzer/: README.md  analyze_bag.py
tools/bag_analyzer/webapp/: README.md  app.html  build.py  webapp.fragment.html  webapp.html
